# TBDataPreparation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.sh  setup.sh  setup.sh.in  setup_noLCG.sh
2023_SPS/PMT/: DoCalibrationSPS.C
2023_SPS/scripts/: DR_makeRootFiles.py  DRrootify.py  DoPhysicsConverter.py  PhysicsConverter.C  PhysicsEvent.h  RunXXX.json
2024_SPS/MapAndCalibration/: RunXXX_2024_prelim.json  RunXXX_2024_v1.json
2024_SPS/PMT/: GetAdcPeaks.C  GetPedestals.C  GetPedestals2024.py  RunXXX_2024_prelim.json  RunXXXcalib.json  pedestals.json
2024_SPS/scripts/: AdcMap24.json  DR_makeRootFiles.py  DRrootify.py  DoPhysicsConverter.py  EventOut.h  PhysicsConverter.C  PhysicsEvent.h  RunXXX.json  map_pythonToJson.py
2025_SPS/: pedestal_run131.json  pedestal_run675.json
2025_SPS/MapAndCalibration/: PMT_calibration_v1.json  RunXXX_2024_v1.json  SiPM_ADCtoGeV_v1.json  SiPM_HGfromLG_v1.json  SiPM_pedestals_v1.json  pmt_map.json  sipm_map.json
2025_SPS/PMT/: DoCalibrationSPS.C  MergeCSVs.py  convertCalCsvToJson.py  mappingPMT.hpp
2025_SPS/SIPM/: CMakeLists.txt
2025_SPS/SIPM/converter/: converter.cpp  converter.h
2025_SPS/SIPM/include/: Board.h  Channel.h  Decoder.h  EventFragment.h  FileHeader.h  FileInfo.h  Helpers.h  LinkDef.h  SiPMDecoder.h  SiPMEvent.h  SiPMEventFragment.h  hardcoded.h  logging.h  mapping_sipm.hpp
2025_SPS/SIPM/scripts/: SiPMConvert.py  tester.py
2025_SPS/SIPM/src/: Board.cxx  Channel.cxx  Decoder.cxx  EventFragment.cxx  FileHeader.cxx  FileInfo.cxx  Helpers.cxx  SiPMDecoder.cxx  SiPMEvent.cxx  SiPMEventFragment.cxx  logging.cxx
2025_SPS/batch/: HTCondor.sh  HTCondor.sub  runs.list
2025_SPS/calibration/: PMT_calibration_v1.json
2025_SPS/include/: LinkDef.h  PhysicsHelper.h
2025_SPS/scripts/: CalibrateEvent.h  DR_makeRootFiles.py  DRrootify.py  DoPhysicsConverter.py  EventOut.h  PhysicsConverter.C  PhysicsEvent.h  PhysicsHelper.cxx  PhysicsHelper.h  bzipPMTfiles.py  decode_utils.py  map_pythonToJson.py
2025_SPS/scripts/testNtuplesPMT/: 332.root  333.root  335.root  337.root
2025_SPS/src/: PhysicsHelper.cxx
